# Humanoid_Gaze

./: .gitignore  .pre-commit-config.yaml  LICENSE  MASK_INTEGRATION_STRATEGY.md  README.md  check_5channel_weight.py  environment.yaml  guide_zuo.txt  nohup.out  pyproject.toml  test_overlay.py
.agent/rules/: dev.md
.agent/workflows/: groot.md
Attention_Analysis/: README.md  eagle_analysis.md
Attention_Analysis/Attention_Module/: Attention_Guided_CAM.py  agcam_official_ref.py  agcam_visualizer.py
Attention_Analysis/Eval/: eval_g1_eagle_vision_visualize.py  eval_g1_head_visualize.py  eval_g1_vlm_visualize.py
Attention_Visualization/: attention_mechanism.md  attention_visualizer.py  eval_attention.py  eval_attention_visualization.py
Groot_Analysis/: GR00T_Architecture_Deep_Analysis.md  GR00T_N1.5_Analysis.md  Groot_VLM_Analysis.md  groot_architecture.md  groot_inference_trace.md  groot_token_variance.csv  inspect_config.py  inspect_groot_tokens.py
docs/: GR00T_Mask_Position_Token_Injection_Guide.md  README_zh.md  method_A_mask_guided_token_scaling.md  和博士后的聊天.txt
test/: test_load_dataset.py  test_load_h5.py  test_local_push_to_hub.py
unitree_lerobot/eval_robot/: SAM2_README.md  eval_g1.py  eval_g1_dataset.py  eval_g1_sam.py  eval_g1_sam_attention.py  eval_g1_sim.py  make_robot.py  replay_robot.py  run_gaze_server.py
unitree_lerobot/lerobot/: pyproject.toml
unitree_lerobot/utils/: add_mask_json.py  constants.py  convert_lerobot_to_h5.py  convert_unitree_json_to_h5.py  convert_unitree_json_to_lerobot.py  convert_unitree_json_to_lerobot_addMask.py  (+1 more)
(+36 files in other folders)
